[package]
name = "dcpd-console"
version = "0.1.0"
edition = "2021"
description = "DCPD Console - 命令行工具"
authors = ["ResearchTools"]
license = "MIT"

[[bin]]
name = "dcpd-console"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
encoding_rs = "0.8"
csv = "1"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
