[package]
name = "dcpd-gui"
version = "0.1.0"
edition = "2021"
description = "DCPD GUI - 图形界面应用"
authors = ["ResearchTools"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1"
csv = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
encoding_rs = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
